updated user guide and increased incoming rel threshold

--- a/backward_prop/GRTool-Src/Solvers/src/Goalreasoner/lin/Goalsolve/Makefile
+++ b/backward_prop/GRTool-Src/Solvers/src/Goalreasoner/lin/Goalsolve/Makefile
@@ -1,13 +1,13 @@
 all: goalsolve
 
 goalsolve: axioms.o decoder.o goal.o goalsolve.o graph.o  wff.o
-	g++ axioms.o decoder.o goal.o goalsolve.o graph.o  wff.o -o goalsolve
+	g++ -Wno-deprecated axioms.o decoder.o goal.o goalsolve.o graph.o  wff.o -o goalsolve
 
 goalminsolve: axioms.o decoder.o goal.o goalminsolve.o weights.o graph.o  wff.o
-	g++ axioms.o decoder.o goal.o goalminsolve.o graph.o weights.o wff.o -o goalminsolve
+	g++ -Wno-deprecated axioms.o decoder.o goal.o goalminsolve.o graph.o weights.o wff.o -o goalminsolve
 
 %.o : %.c
-	g++ -c  $< -o $@
+	g++ -Wno-deprecated -c  $< -o $@
 
 clean: 
 	rm *.o goalsolve goalminsolve
